--- a/wx_xinxuan/project.config.json
+++ b/wx_xinxuan/project.config.json
@@ -1,7 +1,7 @@
 {
     "description": "项目配置文件。",
     "setting": {
-        "urlCheck": false,
+        "urlCheck": true,
         "es6": true,
         "enhance": true,
         "postcss": true,
@@ -40,7 +40,7 @@
     },
     "compileType": "miniprogram",
     "libVersion": "2.21.2",
-    "appid": "wxf3d768d1818218f1",
+    "appid": "wx9827616b544fb516",
     "projectname": "%E5%BF%83%E9%80%89%E6%8A%98%E6%89%A3%E4%BB%93",
     "isGameTourist": false,
     "scripts": {
