--- a/wx_xinxuan/app.json
+++ b/wx_xinxuan/app.json
@@ -3,7 +3,24 @@
         "pages/index/index",
         "pages/category/index",
         "pages/search/search",
-        "pages/goods/goods"
+        "pages/goods/goods",
+        
+        "pages/share/index",
+        "pages/cart/cart",
+        "pages/app-auth/index",
+        "pages/order-check/index",
+        "pages/ucenter/about/index",
+        "pages/ucenter/address/index",
+        "pages/ucenter/address-detail/index",
+        "pages/ucenter/index/index",
+        "pages/ucenter/settings/index",
+        "pages/ucenter/order-list/index",
+        "pages/ucenter/goods-list/index",
+        "pages/ucenter/order-details/index",
+        "pages/ucenter/express-info/index",
+        "pages/ucenter/footprint/index",
+        "pages/payResult/payResult",
+        "pages/payOffline/index"
     ],
     "window": {
         "backgroundTextStyle": "light",
@@ -29,6 +46,18 @@
                 "iconPath": "images/nav/icon-cate-off.png",
                 "selectedIconPath": "images/nav/icon-cate-on.png",
                 "text": "分类"
+            },
+            {
+                "pagePath": "pages/cart/cart",
+                "iconPath": "images/nav/icon-cart-b.png",
+                "selectedIconPath": "images/nav/icon-cart-r.png",
+                "text": "购物车"
+            },
+            {
+                "pagePath": "pages/ucenter/index/index",
+                "iconPath": "images/nav/icon-center-b.png",
+                "selectedIconPath": "images/nav/icon-center-r.png",
+                "text": "我的"
             }
         ]
     },
