--- a/wx_xinxuan/project.config.json
+++ b/wx_xinxuan/project.config.json
@@ -1,7 +1,7 @@
 {
     "description": "项目配置文件。",
     "setting": {
-        "urlCheck": true,
+        "urlCheck": false,
         "es6": true,
         "enhance": true,
         "postcss": true,
@@ -39,7 +39,7 @@
         "useCompilerPlugins": false
     },
     "compileType": "miniprogram",
-    "libVersion": "2.21.2",
+    "libVersion": "2.21.3",
     "appid": "wx9827616b544fb516",
     "projectname": "%E5%BF%83%E9%80%89%E6%8A%98%E6%89%A3%E4%BB%93",
     "isGameTourist": false,
