新增地址类接口

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
             "App\\": "app/"
         },
         "files": [
-            "app/helpers.php"
+            "app/helpers.php",
+            "app/Http/Methods/functions.php"
         ]
     },
     "autoload-dev": {
