--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "dcat/laravel-admin": "2.*",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "overtrue/wechat": "~4.0",
+        "wechatpay/wechatpay": "^1.4"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
@@ -61,7 +63,8 @@
         "optimize-autoloader": true,
         "allow-plugins": {
             "kylekatarnls/update-helper": true,
-            "composer/package-versions-deprecated": true
+            "composer/package-versions-deprecated": true,
+            "easywechat-composer/easywechat-composer": true
         }
     },
     "minimum-stability": "dev",
